Link hover contrast issue on Nightly /whatsnew page (#11589)

--- a/media/css/firefox/whatsnew/whatsnew-nightly.scss
+++ b/media/css/firefox/whatsnew/whatsnew-nightly.scss
@@ -39,6 +39,11 @@ $image-path: '/media/protocol/img';
     a:link,
     a:visited {
         color: $color-ink-80;
+
+        &:hover,
+        &:focus {
+            color: inherit;
+        }
     }
 
     abbr {
